# MoonPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mars/moonplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallback.cpp  JNICallback.h  MoonPlayer.cpp  MoonPlayer.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/mars/moonplayer/: IPlayer.java  MainActivity.java  MoonPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/mars/moonplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
